--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/5093791e93.js" crossorigin="anonymous"></script>
   <title>React App</title>
 </head>
 
